--- a/app/src/main/res/layout/widget_list_view_row.xml
+++ b/app/src/main/res/layout/widget_list_view_row.xml
@@ -19,11 +19,10 @@
         android:shadowRadius="2"
         android:text="id"
         android:textColor="@color/colorCyberpunkRed"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/widget_list_view_row_tv_space"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -36,22 +35,38 @@
         android:shadowRadius="2"
         android:text="—"
         android:textColor="@color/colorCyberpunkRed"
-        android:textSize="30sp" />
+        android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/widget_list_view_row_tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_toEndOf="@+id/textView4"
+        android:layout_toEndOf="@+id/widget_list_view_row_tv_space"
         android:fontFamily="@font/gost"
+        android:maxLength="15"
         android:shadowColor="@color/colorBlack"
         android:shadowRadius="2"
         android:text="City"
         android:textColor="@color/colorCyberpunkRed"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/widget_list_view_row_tv_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toEndOf="@+id/widget_list_view_row_tv_name"
+        android:fontFamily="@font/gost"
+        android:shadowColor="@color/colorBlack"
+        android:shadowRadius="2"
+        android:text="Code"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="20sp" />
 </RelativeLayout>
