рефактор UI пакетов, реализованы переходы между активностями

--- a/app/src/main/res/drawable/grey_background.xml
+++ b/app/src/main/res/drawable/grey_background.xml
@@ -4,6 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <solid
+        android:color="@color/colorBackground"
+        />
 
     <corners android:radius="3dip" />
 
