--- a/app/src/main/res/layout/activity_main_general.xml
+++ b/app/src/main/res/layout/activity_main_general.xml
@@ -1,169 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main_general_create_sv"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/im_background_3">
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/activity_main_general_create_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/im_background_3">
+
+        <RelativeLayout
+        android:id="@+id/activity_main_create_rl_head_anim"
+        android:layout_width="match_parent"
+        android:layout_height="130dp" />
 
     <RelativeLayout
-        android:id="@+id/activity_main_create_rl"
+        android:id="@+id/activity_main_general_rl_head"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGreenBackground">
-
-        <ImageView
-            android:id="@+id/activity_main_general_im_progress_menu"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_above="@+id/activity_main_create_rl_create_window"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="3dp"
-            app:srcCompat="@drawable/im_progress_1" />
-
-        <ImageView
-            android:id="@+id/activity_main_general_im_progress_list"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_above="@+id/activity_main_create_rl_widget_list_window"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="3dp"
-            app:srcCompat="@drawable/im_progress_1" />
-
-        <RelativeLayout
-            android:id="@+id/activity_main_create_rl_create_window"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/activity_main_create_tv_menu"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/grey_background">
-
-            <LinearLayout
-                android:id="@+id/activity_main_general_ll_btn_case_1"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/activity_main_general_iv_btn_create"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:onClick="onClickMenu"
-                    app:srcCompat="@drawable/im_create_btn_off" />
-
-                <ImageView
-                    android:id="@+id/activity_main_general_iv_btn_author"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:onClick="onClickMenu"
-                    app:srcCompat="@drawable/im_author_btn_off" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/activity_main_general_ll_btn_case_2"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_below="@id/activity_main_general_ll_btn_case_1"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/activity_main_general_iv_btn_help"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:onClick="onClickMenu"
-                    app:srcCompat="@drawable/im_help_btn_off" />
-
-                <ImageView
-                    android:id="@+id/activity_main_general_iv_btn_share"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:onClick="onClickMenu"
-                    app:srcCompat="@drawable/im_share_btn_off" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/activity_main_create_rl_head_anim"
-            android:layout_width="match_parent"
-            android:layout_height="130dp" />
-
-        <RelativeLayout
-            android:id="@+id/activity_main_create_rl_widget_list_window"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@+id/activity_main_create_tv_widgets_list"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="70dp"
-            android:background="@drawable/grey_background">
-
-            <ListView
-                android:id="@+id/activity_main_general_lv_widgets"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/activity_main_create_tv_widgets_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/activity_main_create_rl_create_window"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/cyberpunk_2"
-            android:text="Widgets"
-            android:textColor="@color/colorCyberpunkRed"
-            android:textSize="14sp"
-            android:typeface="normal" />
+        android:layout_below="@id/activity_main_create_rl_head_anim"
+        android:layout_marginTop="-10dp"
+        android:background="@color/colorBackground">
 
         <TextView
             android:id="@+id/activity_main_general_tv_head"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/activity_main_create_rl_head_anim"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="-15dp"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="3dp"
             android:fontFamily="@font/cyberpunk_eng"
             android:text="WIDGET"
             android:textColor="@color/colorCyberpunkOrange"
             android:textSize="18sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/activity_main_create_rl_create_window"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/activity_main_general_rl_head"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/grey_background">
+
+        <ImageView
+            android:id="@+id/activity_main_general_im_progress_menu"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            app:srcCompat="@drawable/im_progress_1" />
+
+        <LinearLayout
+            android:id="@+id/activity_main_general_ll_btn_case_2"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/activity_main_general_ll_btn_case_1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_help"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_help_btn_off" />
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_share_btn_off" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/activity_main_general_ll_btn_case_1"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@+id/activity_main_create_tv_menu"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_create"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_create_btn_off" />
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_author_btn_off" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/activity_main_create_tv_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/activity_main_general_tv_head"
+            android:layout_margin="5dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
@@ -173,6 +138,52 @@
             android:textColor="@color/colorCyberpunkRed"
             android:textSize="14sp"
             android:typeface="normal" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/activity_main_create_rl_widget_list_window"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@id/activity_main_create_rl_create_window"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/grey_background">
+
+        <ImageView
+            android:id="@+id/activity_main_general_im_progress_list"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            app:srcCompat="@drawable/im_progress_1" />
+
+        <ListView
+            android:id="@+id/activity_main_general_lv_widgets"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/activity_main_create_tv_widgets_list" />
+
+        <TextView
+            android:id="@+id/activity_main_create_tv_widgets_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/cyberpunk_2"
+            android:text="Widgets"
+            android:textColor="@color/colorCyberpunkRed"
+            android:textSize="14sp"
+            android:typeface="normal" />
+    </RelativeLayout>
 
         <TextView
             android:id="@+id/textView"
@@ -186,4 +197,3 @@
             android:textSize="12sp" />
 
     </RelativeLayout>
-</ScrollView>
