--- a/app/src/main/res/layout/activity_main_general.xml
+++ b/app/src/main/res/layout/activity_main_general.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/activity_main_create_rl_head_anim"
         android:layout_marginTop="-10dp"
-        android:background="@color/colorBackground">
+        android:background="@color/colorWidgetBackground">
 
         <TextView
             android:id="@+id/activity_main_general_tv_head"
@@ -70,7 +70,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
@@ -82,7 +81,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
@@ -105,7 +103,6 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:onClick="onClickMenu"
                 app:srcCompat="@drawable/im_create_btn_off" />
@@ -117,7 +114,6 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:onClick="onClickMenu"
                 app:srcCompat="@drawable/im_author_btn_off" />
@@ -128,11 +124,9 @@
             android:id="@+id/activity_main_create_tv_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:fontFamily="@font/cyberpunk_2"
             android:text="MENU"
             android:textColor="@color/colorCyberpunkRed"
