--- a/app/src/main/res/layout/activity_city_list.xml
+++ b/app/src/main/res/layout/activity_city_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_city_list_rl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgroundListActivity">
+    android:background="@drawable/im_background_3">
 
     <RelativeLayout
         android:id="@+id/activity_city_list_rl_head"
@@ -15,20 +14,19 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/rounded_background">
+        android:background="@drawable/grey_background">
 
         <TextView
             android:id="@+id/activity_city_list_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="@string/fragment_city_list_tv"
-            android:layout_margin="5dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginBottom="3dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="sans-serif-light"
-            android:textColor="@color/colorTextBlack"
+            android:text="@string/fragment_city_list_tv"
+            android:textColor="@color/colorCyberpunkRed"
             android:textSize="20sp" />
     </RelativeLayout>
 
@@ -42,23 +40,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/rounded_background" />
-
-    <EditText
-        android:id="@+id/activity_city_list_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/rounded_background"
-        android:hint="@string/search"
-        android:inputType="textCapWords"
-        android:padding="5dp"
-        android:textColor="@color/colorTextBlack"
-        android:textColorHint="@color/colorInfoText"
-        tools:ignore="Autofill,LabelFor" />
+        android:background="@drawable/grey_background" />
 
     <ProgressBar
         android:id="@+id/activity_city_list_pb"
@@ -68,4 +50,21 @@
         android:layout_centerInParent="true"
         android:indeterminate="true"
         android:visibility="invisible" />
+
+    <EditText
+        android:id="@+id/activity_city_list_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/grey_background"
+        android:hint="@string/search"
+        android:inputType="textCapWords"
+        android:padding="5dp"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textColorHint="@color/colorCyberpunkRed"
+        tools:ignore="Autofill,LabelFor" />
+
 </RelativeLayout>
