--- a/app/src/main/res/layout/city_row.xml
+++ b/app/src/main/res/layout/city_row.xml
@@ -18,8 +18,8 @@
         android:maxLines="1"
         android:text="@string/empty_row"
         android:textAlignment="viewStart"
-        android:textColor="@color/colorTextBlack"
+        android:textColor="@color/colorCyberpunkRed"
         android:textSize="18sp"
-        android:textStyle="italic"/>
+        android:textStyle="italic" />
 
 </RelativeLayout>
